--- a/package.json
+++ b/package.json
@@ -10,19 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@next/font": "^14.2.15",
     "axios": "^1.12.1",
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
-    "express": "^5.1.0",
     "framer-motion": "^12.23.12",
-    "heroicons": "^2.2.0",
-    "i18n": "^0.15.1",
     "i18next": "^25.5.2",
     "lucide-react": "^0.544.0",
     "mongoose": "^8.18.1",
     "next": "15.3.4",
-    "next-i18next": "^15.4.2",
     "react": "^19.1.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
@@ -31,13 +26,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
-    "tailwindcss": "^4",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5"
   }
 }
